--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
 <ol>
     <li><a href="http://kubsu.ru/">КубГУ</a><lj>
     <li><a href="https://kubsu.ru/">КубГУ</a><lj>
+        <li><a href="ftp://test.txt">test.txt</a><lj>
+    <li><a href="ftp://user:pass123@kubsu.ru/test.txt">test.txt</a><lj>
 </ol>
