--- a/index.html
+++ b/index.html
@@ -1,6 +1,32 @@
 <ol>
-    <li><a href="http://kubsu.ru/">КубГУ</a><lj>
-    <li><a href="https://kubsu.ru/">КубГУ</a><lj>
-        <li><a href="ftp://test.txt">test.txt</a><lj>
-    <li><a href="ftp://user:pass123@kubsu.ru/test.txt">test.txt</a><lj>
+    <li>
+        <a href="http://kubsu.ru/">Абсолютная гиперссылка на главную страницу сайта КубГУ</a>
+    <lj>
+    <li>
+        <a href="https://kubsu.ru/">Абсолютная гиперссылка на главную страницу сайта КубГУ в протоколе https/a>
+    <lj>
+    <li>
+        <a href="ftp://C:/test.txt">Ссылка FTP без авторизации</a>
+    <lj>
+    <li>
+        <a href="ftp://user:pass123@kubsu.ru/test.txt">Ссылка FTP с авторизацией</a>
+    <lj>
+    <li>
+        <a href="https://www.kubsu.ru/ru/node/36476#:~:text=Источник:%20Минобрнауки%20России">Ссылка на фрагмент некторой страницы</a>
+    <lj>
+
+    <li>
+        <a href="https://example.com?a=username&b=password"> Ссылка с двумя параметрами в URl </a>
+    <lj>
+  <li>
+    <ul>
+    <a href="index.html" title="Главная"> Главная</a>
+      </ul>
+      <ul>
+        <a href="#top" title="Начало"> Начало страницы </a>
+      </ul>
+      <ul>
+        <a href="#form" title="Форма"> Форма </a>
+      </ul>
+    <lj>
 </ol>
