--- a/index.html
+++ b/index.html
@@ -1,23 +1,23 @@
 <ol>
     <li>
         <a href="http://kubsu.ru/">Абсолютная гиперссылка на главную страницу сайта КубГУ</a>
-    <lj>
+    </li>
     <li>
         <a href="https://kubsu.ru/">Абсолютная гиперссылка на главную страницу сайта КубГУ в протоколе https/a>
-    <lj>
+    </li>
     <li>
         <a href="ftp://C:/test.txt">Ссылка FTP без авторизации</a>
-    <lj>
+    </li>
     <li>
         <a href="ftp://user:pass123@kubsu.ru/test.txt">Ссылка FTP с авторизацией</a>
-    <lj>
+    </li>
     <li>
         <a href="https://www.kubsu.ru/ru/node/36476#:~:text=Источник:%20Минобрнауки%20России">Ссылка на фрагмент некторой страницы</a>
-    <lj>
+    </li>
 
     <li>
         <a href="https://example.com?a=username&b=password"> Ссылка с двумя параметрами в URl </a>
-    <lj>
+    </li>
   <li>
     <ul>
     <a href="index.html" title="Главная"> Главная</a>
@@ -28,5 +28,20 @@
       <ul>
         <a href="#form" title="Форма"> Форма </a>
       </ul>
-    <lj>
+    </li>
+    <li>
+        <a>Ссылка без href </a>
+    </li>
+    <li>
+        <a href = ""> Ссылка с пустым href </a>
+    </li>
+    <li>
+      <a href="http://kubsu.ru/" rel="nofollow"> Ссылка, по которой запрещен переход поисковикам</a>
+    </li>
+    <li>
+        <noindex><a href = "http://kubsu.ru/">Ссылка, запрещенная для индексации поисковиками</a></noindex>
+    </li>
+    <li>
+        Констекстная ссылка в <a href = "http://kubsu.ru/">тексте</a> абзаца
+    </li>
 </ol>
