--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
         <noindex><a href = "http://kubsu.ru/">Ссылка, запрещенная для индексации поисковиками</a></noindex>
     </li>
     <li>
-        Констекстная ссылка в <a href = "http://kubsu.ru/">тексте</a> абзаца
+        Контекстная ссылка в <a href = "http://kubsu.ru/">тексте</a> абзаца
+    </li>
+    <li>
+        <a href = "https://www.kubsu.ru/sites/all/themes/portal_kubsu/logo.png">Ссылка - изображение</a>
     </li>
 </ol>
