--- a/index.html
+++ b/index.html
@@ -14,20 +14,25 @@
     <li>
         <a href="https://www.kubsu.ru/ru/node/36476#:~:text=Источник:%20Минобрнауки%20России">Ссылка на фрагмент некторой страницы</a>
     </li>
+    <li>
+        <a href = "https://khuako.github.io/#:~:text=Ссылка%20без%20href">Ссылка на фрагмент текущей страницы</a>
+    </li>
 
     <li>
         <a href="https://example.com?a=username&b=password"> Ссылка с двумя параметрами в URl </a>
     </li>
   <li>
-    <ul>
-    <a href="index.html" title="Главная"> Главная</a>
-      </ul>
-      <ul>
+    <ol>
+        <li>
+        <a href="index.html" title="Главная"> Главная</a>
+        </li>
+        <li>
         <a href="#top" title="Начало"> Начало страницы </a>
-      </ul>
-      <ul>
+        </li>
+        <li>
         <a href="#form" title="Форма"> Форма </a>
-      </ul>
+        </li>
+    </ol>
     </li>
     <li>
         <a>Ссылка без href </a>
@@ -39,12 +44,15 @@
       <a href="http://kubsu.ru/" rel="nofollow"> Ссылка, по которой запрещен переход поисковикам</a>
     </li>
     <li>
-        <noindex><a href = "http://kubsu.ru/">Ссылка, запрещенная для индексации поисковиками</a></noindex>
+        <!--noindex--><a href = "http://kubsu.ru/">Ссылка, запрещенная для индексации поисковиками</a> <!--/noindex-->
     </li>
     <li>
         Контекстная ссылка в <a href = "http://kubsu.ru/">тексте</a> абзаца
     </li>
     <li>
-        <a href = "https://www.kubsu.ru/sites/all/themes/portal_kubsu/logo.png">Ссылка - изображение</a>
+        Ссылка изображение:
+        <a href = "http://kubsu.ru/"> <img src = "https://www.kubsu.ru/sites/all/themes/portal_kubsu/logo.png" width = "50" height = "50" alt="Официальный сайт КубГУ"></a>
     </li>
+
+    
 </ol>
