--- a/index.html
+++ b/index.html
@@ -1,9 +1,19 @@
+<!DOCTYPE html>
+<html lang="ru">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Khuako</title>
+</head>
+<body>
+  <h1 id="top"> Хуако Роман | 25/1</h1>
 <ol>
     <li>
         <a href="http://kubsu.ru/">Абсолютная гиперссылка на главную страницу сайта КубГУ</a>
     </li>
     <li>
-        <a href="https://kubsu.ru/">Абсолютная гиперссылка на главную страницу сайта КубГУ в протоколе https/a>
+        <a href="https://kubsu.ru/">Абсолютная гиперссылка на главную страницу сайта КубГУ в протоколе https</a>
     </li>
     <li>
         <a href="ftp://C:/test.txt">Ссылка FTP без авторизации</a>
@@ -87,6 +97,7 @@
     <li>
         <a href = "/about/1">Сокращенная ссылка на внутреннюю</a>
     </li>
+</ol>
     <hr>
 
     <h2 id="form"> Форма:</h2>
@@ -153,5 +164,5 @@
   <input type="submit" value="Отправить" />
 </form>
     
-</ol>
-
+</body>
+</html>
