--- a/task2.html
+++ b/task2.html
@@ -7,12 +7,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Khuako</title>
 </head>
-<body>
+<body style="margin:0;">
     <div class="container">
         <header class="header">
         <div class="header_logo">
             <div class="logo">
-                <img class="logo_img" src="https://www.pngkey.com/png/detail/873-8736065_stickers-heinsenberg-2-ombre-breaking-bad-png-logo.png" alt="">
+                <img style="float:left; margin:10px; width:100px; height:100px;" src="https://www.pngkey.com/png/detail/873-8736065_stickers-heinsenberg-2-ombre-breaking-bad-png-logo.png" alt="Описание картинки для скрин-ридеров и поисковиков" />
             </div>
             <div class="logo_name">Задание 2</div>
         </div>
@@ -210,6 +210,8 @@
 
   <input type="submit" value="Отправить" />
 </form>
-    
+<footer class="footer">
+    <p class="footer_content">(c) Хуако Роман 2022</p>
+</footer>
 </body>
 </html>
