--- a/task2.html
+++ b/task2.html
@@ -42,7 +42,7 @@
         <a href="https://www.kubsu.ru/ru/node/36476#:~:text=Источник:%20Минобрнауки%20России">Ссылка на фрагмент некторой страницы</a>
     </li>
     <li>
-        <a href = "https://khuako.github.io/#:~:text=Ссылка%20без%20href">Ссылка на фрагмент текущей страницы</a>
+        <a href = "https://khuako.github.io/task2.html/#:~:text=Ссылка%20без%20href">Ссылка на фрагмент текущей страницы</a>
     </li>
 
     <li>
@@ -51,7 +51,7 @@
     <li> Навигация
       <nav>
           <ul>
-              <li><a href="index2.html" title="Главная">Главная</a></li>
+              <li><a href="task2.html" title="Главная">Главная</a></li>
               <li><a href="#top" title="Начало">Начало страницы</a></li>
               <li><a href="#form" title="Форма">Форма</a></li>
           </ul>
