--- a/task4.html
+++ b/task4.html
@@ -152,23 +152,23 @@
     <input id="mail" type="email" placeholder="Your Gmail"><br>
     <label for='date'>Date</label><br>
     <input type="date" id="date"><br>
-    <div>Gender</div><br>
+    <div>Гендер</div><br>
     <input type="radio" name="gender" checked="checked" value="man" id="man">
-    <label for='man'>Man</label>
+    <label for='man'>Мужчина</label>
     <input type="radio" name="gender" value="woman" id="woman">
-    <label for='woman'>Woman</label><br>
+    <label for='woman'>Женщина</label><br>
     <div>Legs:</div><br>
     <input type="radio" name="legs" value="1" id="one">
-    <label for='one'>One</label>
+    <label for='one'>1</label>
     <input type="radio" name="legs" checked="checked" value="2" id="two">
-    <label for='two'>Two</label><br>
+    <label for='two'>2</label><br>
     <label for="super">Superpower</label><br>
     <select id="super" multiple="multiple" >
         <option >бессмертие</option>
         <option >левитация</option>
         <option >прохождение сквозь стены</option>
     </select><br>
-    <label for="bio">Biograth</label><br>
+    <label for="bio">Биография</label><br>
     <textarea id="bio">Начните писать биографию</textarea><br>
 
     <input id="confirm" type="checkbox">
