--- a/index8.html
+++ b/index8.html
@@ -37,7 +37,7 @@
                 </div>
                 <div class = "cBox">
                     <input type = "checkbox" class = "form-check-input" id = "check" required>
-                    <label class = "form-check-label" for="check">I agree with the privace policy.</label>
+                    <label class = "form-check-label" for="check">I agree with the privacy policy.</label>
                 </div>
                 <button type = "submit" class = "btn btn-outline-danger">Send</button>
             </form>
