--- a/index8.html
+++ b/index8.html
@@ -25,7 +25,7 @@
             <form class = "formAjax" action = "https://formcarry.com/s/5qiaH_V0K" method = "POST" accept-charset="UTF-8" id = "frm">
                 <div class = "field" id = "field">
                     <label for = "Name">Name</label>
-                    <input type = "text" name = "firstName" class = "formField" id = "Name" placeholder="Enter your name."required>
+                    <input type = "text" name = "firstName" class = "formField" id = "Name" placeholder="Enter your name"required>
                 </div>
                 <div class = "field">
                     <label for="Mail">Email</label>
