--- a/Kolibrin&Khuako.html
+++ b/Kolibrin&Khuako.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0">
     <link rel="shortcut icon" type="image/png" href="img/header/D-logo.svg">
     <title>Drupal Coder - разработка сайтов на drupal</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <header class="header">
