--- a/Kolibrin&Khuako.html
+++ b/Kolibrin&Khuako.html
@@ -26,8 +26,8 @@
                             <img src="img/drupal-coder.svg" alt="drupal-icon">
                         </a>
                     </div>
-                    <li class="header-menu-link" id="supp"><a>Поддержка сайтов</a></li>
-                    <li class="header-menu-link" id="rate"><a>Тарифы</a></li>
+                    <li class="header-menu-link" id="supp"><a href="#support">Поддержка сайтов</a></li>
+                    <li class="header-menu-link" id="rate"><a href="#plans">Тарифы</a></li>
                     <li class="header-menu-link" id="works"><a>Наши работы</a></li>
                     <li class="header-menu-link" id="rev"><a>Отзывы</a></li>
                     <li class="header-menu-link" id="contacts"><a>Контакты</a></li>
@@ -291,6 +291,171 @@
         </div>
         <div class="support-notebook">
             <img src="img/support/notebook.svg" alt="">
+        </div>
+    </div>
+        <!-- ТАРИФЫ И ИХ ПРЕИМУЩЕСТВА -->
+    <div class="plans">
+        <div class="plans-body o-container">
+            <div class="plans-title" id="plans">
+                <span>
+                    Тарифы
+                </span>
+            </div>
+            <div class="plans-cards">
+                <div class="plans-card-starter plans-card">
+                    <div class="plans-wrapper">
+                        <div class="plans-card-title">
+                            <h4>
+                                Стартовый
+                            </h4>
+                            <div class="plans-card-price">
+                                <h3>
+                                    2000 <span>₽</span>
+                                </h3>
+                                <p>в час</p>
+                            </div>
+                        </div>
+
+                        <div class="plans-card-line"></div>
+                        <div class="plans-card-list-options">
+                            <div class="plans-card-checkmark">
+                                <img src="img/plans/Vector.svg" alt="">
+                            </div>
+                            <p>Предоплата от 2 часов</p>
+                        </div>
+                        <div class="plans-card-list-options">
+                            <div class="plans-card-checkmark">
+                                <img src="img/plans/Vector.svg" alt="">
+                            </div>
+                            <p>Консультации и работы по SEO</p>
+                        </div>
+                        <div class="plans-card-list-options">
+                            <div class="plans-card-checkmark">
+                                <img src="img/plans/Vector.svg" alt="">
+                            </div>
+                            <p>Услуги дизайнера</p>
+                        </div>
+                        <div class="plans-card-list-options">
+                            <div class="plans-card-checkmark">
+                                <img src="img/plans/Vector.svg" alt="">
+                            </div>
+                            <p>Стандартное время реакции</p>
+                        </div>
+                        <div class="plans-card-list-options">
+                            <div class="plans-card-checkmark">
+                                <img src="img/plans/Vector.svg" alt="">
+                            </div>
+                            <p>Неиспользованные оплаченные часы переносятся на следующий месяц</p>
+                        </div>
+                        <input class="plans-btn" type="button" value="ОСТАВИТЬ ЗАЯВКУ!">
+                    </div>
+                </div>
+                <div class="plans-card-business plans-card">
+                    <div class="plans-wrapper">
+                        <div class="plans-card-title">
+                            <h4>
+                                Бизнес
+                            </h4>
+                            <div class="plans-card-price">
+                                <h3>
+                                    2000 <span>₽</span>
+                                </h3>
+                                <p>в час</p>
+                            </div>
+                        </div>
+
+                        <div class="plans-card-line"></div>
+                        <div class="plans-card-list-options">
+                            <div class="plans-card-checkmark">
+                                <img src="img/plans/Vector.svg" alt="">
+                            </div>
+                            <p>Предоплата от 10 часов</p>
+                        </div>
+                        <div class="plans-card-list-options">
+                            <div class="plans-card-checkmark">
+                                <img src="img/plans/Vector.svg" alt="">
+                            </div>
+                            <p>Консультации и работы по SEO</p>
+                        </div>
+                        <div class="plans-card-list-options">
+                            <div class="plans-card-checkmark">
+                                <img src="img/plans/Vector.svg" alt="">
+                            </div>
+                            <p>Услуги дизайнера</p>
+                        </div>
+                        <div class="plans-card-list-options">
+                            <div class="plans-card-checkmark">
+                                <img src="img/plans/Vector.svg" alt="">
+                            </div>
+                            <p>Высокое время реакции –
+                                до 2 рабочих дней</p>
+                        </div>
+                        <div class="plans-card-list-options">
+                            <div class="plans-card-checkmark">
+                                <img src="img/plans/Vector.svg" alt="">
+                            </div>
+                            <p>Неиспользованные часы не переносятся</p>
+                        </div>
+                        <input class="plans-btn" type="button" value="ОСТАВИТЬ ЗАЯВКУ!">
+                    </div>
+                </div>
+                <div class="plans-card-vip plans-card">
+                    <div class="plans-wrapper">
+                        <div class="plans-card-title">
+                            <h4>
+                                VIP
+                            </h4>
+                            <div class="plans-card-price">
+                                <h3>
+                                    1800 <span>₽</span>
+                                </h3>
+                                <p>в час</p>
+                            </div>
+                        </div>
+
+                        <div class="plans-card-line"></div>
+                        <div class="plans-card-list-options">
+                            <div class="plans-card-checkmark">
+                                <img src="img/plans/Vector.svg" alt="">
+                            </div>
+                            <p>Предоплата от 100 часов</p>
+                        </div>
+                        <div class="plans-card-list-options">
+                            <div class="plans-card-checkmark">
+                                <img src="img/plans/Vector.svg" alt="">
+                            </div>
+                            <p>Консультации и работы по SEO</p>
+                        </div>
+                        <div class="plans-card-list-options">
+                            <div class="plans-card-checkmark">
+                                <img src="img/plans/Vector.svg" alt="">
+                            </div>
+                            <p>Услуги дизайнера</p>
+                        </div>
+                        <div class="plans-card-list-options">
+                            <div class="plans-card-checkmark">
+                                <img src="img/plans/Vector.svg" alt="">
+                            </div>
+                            <p>Максимальное время
+                                реакции – в день обращения</p>
+                        </div>
+                        <div class="plans-card-list-options">
+                            <div class="plans-card-checkmark">
+                                <img src="img/plans/Vector.svg" alt="">
+                            </div>
+                            <p>Неиспользованные часы не переносятся</p>
+                        </div>
+                        <input class="plans-btn" type="button" value="ОСТАВИТЬ ЗАЯВКУ!">
+                    </div>
+                </div>
+            </div>
+            <span class="plans-footer-text">Вам не подходят наши тарифы? Оставьте заявку и мы предложим вам
+                индивидуальные
+                условия!</span>
+            <a href="#">ПОЛУЧИТЬ ИНДИВИДУАЛЬНЫЙ ТАРИФ</a>
+        </div>
+        <div class="big-D-background">
+            <img src="img/plans/D-background.svg" alt="">
         </div>
     </div>
 </body>
