--- a/Kolibrin&Khuako.html
+++ b/Kolibrin&Khuako.html
@@ -28,7 +28,7 @@
                     </div>
                     <li class="header-menu-link" id="supp"><a href="#support">Поддержка сайтов</a></li>
                     <li class="header-menu-link" id="rate"><a href="#plans">Тарифы</a></li>
-                    <li class="header-menu-link" id="works"><a>Наши работы</a></li>
+                    <li class="header-menu-link" id="works"><a href="#cases">Наши работы</a></li>
                     <li class="header-menu-link" id="rev"><a>Отзывы</a></li>
                     <li class="header-menu-link" id="contacts"><a>Контакты</a></li>
                     <ul class="header-contacts">
@@ -456,6 +456,122 @@
         </div>
         <div class="big-D-background">
             <img src="img/plans/D-background.svg" alt="">
+        </div>
+    </div>
+        <!-- КЕЙСЫ -->
+    <div class="cases o-container" id="cases">
+        <div class="cases-title">
+            <span>Последние кейсы</span>
+        </div>
+        <div class="cases-items">
+            <div class="cases-width-380 cases-small-case">
+                <img src="img/cases/image1.png" alt="">
+                <div class="cases-text">
+                    <span>Настройка выгрузки YML для Яндекс.Маркета</span>
+                    <p class="date">22.04.2019</p>
+                    <p>Эти слова совершенно справедливы, однако гипнотический рифф продолжает паузный пласт.</p>
+                </div>
+            </div>
+            <div class="cases-width-780" style="grid-column: 2/4;">
+                <img src="img/cases/image2.png" alt="">
+                <div class="cases-text">
+                    <span>Настройка выгрузки YML для Яндекс.Маркета</span>
+                </div>
+            </div>
+            <div class="cases-width-380">
+                <img src="img/cases/image3.png" alt="">
+                <div class="cases-text">
+                    <span>Настройка выгрузки YML для Яндекс.Маркета</span>
+                    <p class="date">22.04.2019</p>
+                </div>
+            </div>
+            <div class="cases-width-380">
+                <img src="img/cases/image4.png" alt="">
+                <div class="cases-text">
+                    <span>Настройка выгрузки YML для Яндекс.Маркета</span>
+                    <p class="date">22.04.2019</p>
+                </div>
+            </div>
+            <div class="cases-width-380 cases-small-case">
+                <img src="img/cases/image5.png" alt="">
+                <div class="cases-text">
+                    <span>Настройка выгрузки YML для Яндекс.Маркета</span>
+                    <p class="date">22.04.2019</p>
+                    <p>Эти слова совершенно справедливы, однако гипнотический рифф продолжает паузный пласт.</p>
+                </div>
+            </div>
+            <div class="cases-width-780" style="grid-column: 1/3;">
+                <img src="img/cases/image6.png" alt="">
+                <div class="cases-text">
+                    <span>Настройка выгрузки YML для Яндекс.Маркета</span>
+                </div>
+            </div>
+            <div class="cases-width-380">
+                <img src="img/cases/image7.png" alt="">
+                <div class="cases-txt">
+                    <span>Настройка выгрузки YML для Яндекс.Маркета</span>
+                    <p class="date">22.04.2019</p>
+                </div>
+            </div>
+        </div>
+        <button class="cases-more">ПОКАЗАТЬ ЕЩЁ</button>
+    </div>
+        <!-- СПИСОК КОМАНДЫ -->
+    <div class="team o-container">
+        <div class="team-title">
+            <span>
+                Команда
+            </span>
+        </div>
+        <div class="team-list min-container">
+            <div class="team-list-item">
+                <div class="team-photo">
+                    <img src="img/team/Sinica-S.jpg" alt="сотрудник">
+                </div>
+                <div class="team-employee">
+                    <div class="team-employee-name">Сергей Синица</div>
+                    <div class="team-employee-position">Руководитель отдела веб-разработки, канд. техн. наук, заместитель
+                        директора</div>
+                </div>
+            </div>
+            <div class="team-list-item">
+                <div class="team-photo">
+                    <img src="img/team/Agabekov-R.jpg" alt="сотрудник">
+                </div>
+                <div class="team-employee">
+                    <div class="team-employee-name">Роман Агабеков</div>
+                    <div class="team-employee-position">Руководитель отдела DevOPS, директор</div>
+                </div>
+            </div>
+            <div class="team-list-item">
+                <div class="team-photo">
+                    <img src="img/team/Sinica-A.jpg" alt="сотрудник">
+                </div>
+                <div class="team-employee">
+                    <div class="team-employee-name">Алексей Синица</div>
+                    <div class="team-employee-position">Руководитель отдела поддержки сайтов</div>
+                </div>
+            </div>
+            <div class="team-list-item">
+                <div class="team-photo">
+                    <img src="img/team/Bochkaryova-D.jpg" alt="сотрудник">
+                </div>
+                <div class="team-employee">
+                    <div class="team-employee-name">Дарья Бочкарёва</div>
+                    <div class="team-employee-position">Руководитель отдела продвижения, контекстной рекламы и
+                        контент-поддержки
+                        сайтов</div>
+                </div>
+            </div>
+            <div class="team-list-item">
+                <div class="team-photo">
+                    <img src="img/team/Torkunova-I.jpg" alt="сотрудник">
+                </div>
+                <div class="team-employee">
+                    <div class="team-employee-name">Ирина Торкунова</div>
+                    <div class="team-employee-position">Менеджер по работе с клиентами</div>
+                </div>
+            </div>
         </div>
     </div>
 </body>
