--- a/Kolibrin&Khuako.html
+++ b/Kolibrin&Khuako.html
@@ -29,7 +29,7 @@
                     <li class="header-menu-link" id="supp"><a href="#support">Поддержка сайтов</a></li>
                     <li class="header-menu-link" id="rate"><a href="#plans">Тарифы</a></li>
                     <li class="header-menu-link" id="works"><a href="#cases">Наши работы</a></li>
-                    <li class="header-menu-link" id="rev"><a>Отзывы</a></li>
+                    <li class="header-menu-link" id="rev"><a href="#reviews">Отзывы</a></li>
                     <li class="header-menu-link" id="contacts"><a>Контакты</a></li>
                     <ul class="header-contacts">
                         <li class="header-phone"><a href="tel:88002222673">8 800 222-26-73</a></li>
@@ -755,6 +755,69 @@
             </div>
             <div class="slick-arrows">
                 <span class="slick-slide-num"><span class="slick-slide-num-current"></span>/ 08</span>
+            </div>
+        </div>
+    </div>
+        <!-- ПАРТНЕРЫ ПРОЕКТА -->
+    <div class="partners">
+        <div class="partners-title">
+            <span>С нами работают</span>
+        </div>
+        <p class="partners-txt">
+            Десятки компаний доверяют нам самое ценное, что у них есть в интернете – свои сайты. Мы делаем всё,
+            чтобы наше сотрудничество было долгим.
+        </p>
+
+        <div class="partners-slider-first">
+            <div class="slider-item">
+                <img src="img/partners/company-1.png" alt="">
+            </div>
+            <div class="slider-item">
+                <img src="img/partners/company-2.png" alt="">
+            </div>
+            <div class="slider-item">
+                <img src="img/partners/company-3.png" alt="">
+            </div>
+            <div class="slider-item">
+                <img src="img/partners/company-4.png" alt="">
+            </div>
+            <div class="slider-item">
+                <img src="img/partners/company-5.png" alt="">
+            </div>
+            <div class="slider-item">
+                <img src="img/partners/company-6.png" alt="">
+            </div>
+            <div class="slider-item">
+                <img src="img/partners/company-7.png" alt="">
+            </div>
+            <div class="slider-item">
+                <img src="img/partners/company-8.png" alt="">
+            </div>
+        </div>
+        <div class="partners-slider-second">
+            <div class="slider-item">
+                <img src="img/partners/company-9.png" alt="">
+            </div>
+            <div class="slider-item">
+                <img src="img/partners/company-10.png" alt="">
+            </div>
+            <div class="slider-item">
+                <img src="img/partners/company-11.png" alt="">
+            </div>
+            <div class="slider-item">
+                <img src="img/partners/company-12.png" alt="">
+            </div>
+            <div class="slider-item">
+                <img src="img/partners/company-13.png" alt="">
+            </div>
+            <div class="slider-item">
+                <img src="img/partners/company-14.png" alt="">
+            </div>
+            <div class="slider-item">
+                <img src="img/partners/company-15.png" alt="">
+            </div>
+            <div class="slider-item">
+                <img src="img/partners/company-16.png" alt="">
             </div>
         </div>
     </div>
