--- a/Kolibrin&Khuako.html
+++ b/Kolibrin&Khuako.html
@@ -572,6 +572,15 @@
                     <div class="team-employee-position">Менеджер по работе с клиентами</div>
                 </div>
             </div>
+            <div class="team-list-item">
+                <div class="team-photo">
+                    <img src="img/team/Dyakova-E.png" alt="сотрудник">
+                </div>
+                <div class="team-employee">
+                    <div class="team-employee-name">Эльмира Дьякова</div>
+                    <div class="team-employee-position">Руководитель отдела по работе с клиентами</div>
+                </div>
+            </div>
         </div>
     </div>
     <!-- ОТЗЫВЫ -->
