--- a/Kolibrin&Khuako.html
+++ b/Kolibrin&Khuako.html
@@ -830,4 +830,7 @@
             </div>
         </div>
     </div>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="js/slick.min.js"></script>
+    <script src="js/script.js"></script>
 </body>
