--- a/Kolibrin&Khuako.html
+++ b/Kolibrin&Khuako.html
@@ -830,7 +830,7 @@
             </div>
         </div>
     </div>
-<div class="form o-container" id="form">
+    <div class="form o-container" id="form">
     <div class="fm">
         <div class="fm1">
             <img src="img/form/small-back-logo.svg" alt="">
@@ -856,22 +856,22 @@
                 <a id="email" href="mailto:info@drupal-coder.ru">info@drupal-coder.ru</a>
             </div>
         </div>
-        <div class="forma">
+        <div class="form">
             <form action="https://formcarry.com/s/5qiaH_V0K" method="POST" accept-charset="UTF-8">>
                 <div>
-                    <input class="forma-elem" id="name" type="text" name="name" required
+                    <input class="form-elem" id="name" type="text" name="name" required
                         placeholder="Ваше имя">
                 </div>
                 <div>
-                    <input class="forma-elem" id="phone" type="tel" name="phone" required
+                    <input class="form-elem" id="phone" type="tel" name="phone" required
                         placeholder="Телефон">
                 </div>
                 <div>
-                    <input class="forma-elem" id="email" type="email" name="email" required
+                    <input class="form-elem" id="email" type="email" name="email" required
                         placeholder="E-mail">
                 </div>
                 <div>
-                    <input id="comment" class="form__form-elem" type="text" placeholder="Ваш комментарий" />
+                    <input id="comment" class="form-form-elem" type="text" placeholder="Ваш комментарий" />
                 </div>
                 <div class="form-checkbox">
                     <input class="checkbox-input" type="checkbox" id="userAgreement">
@@ -879,7 +879,7 @@
                         <a>обработку своих персональных данных</a>.<span>*</span></label>
                 </div>
                 <div>
-                    <input class="forma-btn" type="button" value="ОСТАВИТЬ ЗАЯВКУ!">
+                    <input class="form-btn" type="button" value="ОСТАВИТЬ ЗАЯВКУ!">
                 </div>
             </form>
         </div>
