--- a/Kolibrin&Khuako.html
+++ b/Kolibrin&Khuako.html
@@ -50,7 +50,7 @@
                     <h1 class="header-content-title">Поддержка сайтов на Drupal</h1>
                     <p class="header-content-text">Сопровождение и поддержка сайтов на CMS Drupal любых версий и
                         запущенности</p>
-                    <a class="header-btn">ТАРИФЫ</a>
+                    <a href="#plans" class="header-btn">ТАРИФЫ</a>
 
                 </div>
 
