--- a/Kolibrin&Khuako.html
+++ b/Kolibrin&Khuako.html
@@ -30,7 +30,7 @@
                     <li class="header-menu-link" id="rate"><a href="#plans">Тарифы</a></li>
                     <li class="header-menu-link" id="works"><a href="#cases">Наши работы</a></li>
                     <li class="header-menu-link" id="rev"><a href="#reviews">Отзывы</a></li>
-                    <li class="header-menu-link" id="contacts"><a>Контакты</a></li>
+                    <li class="header-menu-link" id="contacts"><a href="#form">Контакты</a></li>
                     <ul class="header-contacts">
                         <li class="header-phone"><a href="tel:88002222673">8 800 222-26-73</a></li>
                         <li class="header-lang">
