--- a/Kolibrin&Khuako.html
+++ b/Kolibrin&Khuako.html
@@ -830,12 +830,12 @@
             </div>
         </div>
     </div>
-    <div class="form o-container" id="form">
+<div class="form o-cointainer" id="form">
     <div class="fm">
-        <div class="fm1">
+        <div class="fm-1">
             <img src="img/form/small-back-logo.svg" alt="">
         </div>
-        <div class="fm2">
+        <div class="fm-2">
             <img src="img/form/big-back-logo.svg" alt="">
         </div>
     </div>
@@ -847,7 +847,7 @@
                     подрядчик не справился с работой? Тогда вам точно к нам! Просто оставьте заявку и наш менеджер с
                     вами свяжется!</p>
             </div>
-            <div class="form-phone">
+            <div class="form-number">
                 <img src="img/form/phone.svg" alt="">
                 <a id="phone" href="tel:8800222-26-73">8 800 222-26-73</a>
             </div>
@@ -856,18 +856,18 @@
                 <a id="email" href="mailto:info@drupal-coder.ru">info@drupal-coder.ru</a>
             </div>
         </div>
-        <div class="form">
-            <form action="https://formcarry.com/s/5qiaH_V0K" method="POST" accept-charset="UTF-8">>
+        <div class="form-form">
+            <form action="https://formcarry.com/s/5qiaH_V0K" method="POST" accept-charset="UTF-8">
                 <div>
-                    <input class="form-elem" id="name" type="text" name="name" required
+                    <input class="form-form-elem" id="name" type="text" name="name" required
                         placeholder="Ваше имя">
                 </div>
                 <div>
-                    <input class="form-elem" id="phone" type="tel" name="phone" required
+                    <input class="form-form-elem" id="phone" type="tel" name="phone" required
                         placeholder="Телефон">
                 </div>
                 <div>
-                    <input class="form-elem" id="email" type="email" name="email" required
+                    <input class="form-form-elem" id="email" type="email" name="email" required
                         placeholder="E-mail">
                 </div>
                 <div>
@@ -879,12 +879,12 @@
                         <a>обработку своих персональных данных</a>.<span>*</span></label>
                 </div>
                 <div>
-                    <input class="form-btn" type="button" value="ОСТАВИТЬ ЗАЯВКУ!">
+                    <input class="form-form-btn" type="button" value="ОСТАВИТЬ ЗАЯВКУ!">
                 </div>
             </form>
         </div>
     </div>
-    <footer o-container>
+    <footer _container>
         <div class="footer-text">
             <p>Проект ООО «Инитлаб», Краснодар, Россия.</p>
             <p>Drupal является зарегистрированной торговой маркой Dries Buytaert.</p>
